--- a/src/allBlog.css
+++ b/src/allBlog.css
@@ -16,7 +16,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 4em;
+    padding: 2em 1em;
 } 
 
 .avatar {
@@ -53,16 +53,17 @@
     justify-content: space-evenly;
     padding-top: 5em;
     padding-bottom: 5em;
+    flex-wrap: wrap;
 }
 
 .blog-entry {
-    width: 20em;
+    width: 18em;
     height: 28em;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     padding: 1em;
-    margin: 1em;
+    margin: 2em .5em;
     transition: 600ms ease-out;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
 }
