--- a/src/queueDataStructure.css
+++ b/src/queueDataStructure.css
@@ -1,8 +1,4 @@
 .queue-heading {
-    width: 100%;
-    color: white;
-    height: auto;
-    min-height: 28em;
     background-color: black;
     background-image: url('../public/images/ice-cream.jpg');
     background-position: center;
@@ -32,6 +28,7 @@
     height: auto;
     margin: 0 auto;
     text-align: center;
+    color: white;
   }
 
 
@@ -44,34 +41,14 @@
   .queue-heading h1 {
     font-size: 2.5em;
     margin: 1em 0 .5em;
+    font-weight: 600;
   }
   
-  .queue-heading div a {
+  .queue-heading .heading-text p a {
     color: white;
   }
-  
-  .queue-heading .photo {
-    overflow: hidden;
-    width: 7em;
-    height: 7em;
-    border-radius: 50%;
-    margin: 1.5em 0 1em;
-  }
-  
-  .queue-heading .photo img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .queue-main { 
-    width: 100%;
-    padding: 1.5em;
-    margin: 0 auto;
-    line-height: 2em;
-  }
-  
-  .queue-main .graph {
+   
+  .main .graph {
     display: flex;
     justify-content: center;
     padding: 2em;
