--- a/src/allBlog.css
+++ b/src/allBlog.css
@@ -46,44 +46,21 @@
     margin: .5em;
 }
 
-.main {
+.card .img {
     width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: space-evenly;
-    padding-top: 5em;
-    padding-bottom: 5em;
-    flex-wrap: wrap;
-}
-
-.blog-entry {
-    width: 18em;
-    height: 28em;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    padding: 1em;
-    margin: 2em .5em;
-    transition: 600ms ease-out;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
-}
-
-.blog-entry .img {
-    width: 100%;
-    height: 10em;
+    height: 15em;
     overflow: hidden;
 }
-.blog-entry .img img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
+
+.card {
+    transition: 500ms ease-out;
 }
 
-.blog-entry:hover {
+.card:hover {
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
-    transform: translateY(-1em);
+    transform: translateY(-1.5em);
 }
 
-.blog-entry .arrow:hover {
+.card .arrow:hover {
     transform: scale(1.1);
 }
