--- a/src/bubbleSort.css
+++ b/src/bubbleSort.css
@@ -6,11 +6,21 @@
   background-size: cover;
   background-repeat: no-repeat;
   justify-content: center;
+  width: 100%;
+  height: 30em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
 }
 
 .header-text {
   margin-left: auto;
   margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .bubble-heading h1 {
